--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -30,7 +30,7 @@
 
     <!-- Log out -->
     <% if user_connected %>
-      <li><%= link_to "Logout", logout_path %></li>
+      <li><%= link_to "Logout", logout_path, data: { turbo: "false" } %></li>
     <% end %>
 
   </ul>
