--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,25 +1,27 @@
 <h1>Sign up</h1>
 
-<div>
-  <%= form_with model: @user, url: registrations_path do |form| %>
-    <div>
-      <%= form.label :first_name %>
-      <%= form.text_field :first_name %>
-    </div>
-    <div>
-      <%= form.label :last_name %>
-      <%= form.text_field :last_name %>
-    </div>
-    <div>
-      <%= form.label :email %>
-      <%= form.email_field :email %>
-    </div>
-    <div>
-      <%= form.label :password %>
-      <%= form.password_field :password %>
-    </div>
-    <div>
-      <%= form.submit "Sign up" %>
-    </div>
-  <% end %>
-</div>
+<%= turbo_frame_tag "sign_up_form" do %>
+  <div>
+    <%= form_with model: @user, url: registrations_path do |form| %>
+      <div>
+        <%= form.label :first_name %>
+        <%= form.text_field :first_name %>
+      </div>
+      <div>
+        <%= form.label :last_name %>
+        <%= form.text_field :last_name %>
+      </div>
+      <div>
+        <%= form.label :email %>
+        <%= form.email_field :email %>
+      </div>
+      <div>
+        <%= form.label :password %>
+        <%= form.password_field :password %>
+      </div>
+      <div>
+        <%= form.submit "Sign up" %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
